feat: sets the initial files

--- a/test/tests.html
+++ b/test/tests.html
@@ -15,6 +15,7 @@
 
     <script type="module" src="./scripts/utils/moneytest.js"></script>
     <script type="module" src="./data/cartTest.js"></script>
+    <script type="module" src="./data/deliveryOptionsTest.js"></script>
   </head>
   <body>
     <div class="tests-container"></div>
