--- a/test/tests.html
+++ b/test/tests.html
@@ -16,6 +16,7 @@
     <script type="module" src="./scripts/utils/moneytest.js"></script>
     <script type="module" src="./data/cartTest.js"></script>
     <script type="module" src="./data/deliveryOptionsTest.js"></script>
+    <script type="module" src="./scripts/checkout/paymentSummaryTest.js"></script>
   </head>
   <body>
     <div class="tests-container"></div>
