--- a/test/tests.html
+++ b/test/tests.html
@@ -18,6 +18,7 @@
     <script type="module" src="./data/deliveryOptionsTest.js"></script>
     <script type="module" src="./scripts/checkout/paymentSummaryTest.js"></script>
     <script type="module", src="./scripts/checkout/orderSummaryTest.js"></script>
+    <script type="module", src="./scripts/checkout/orderSummaryEventsTest.js"></script>
   </head>
   <body>
     <div class="tests-container"></div>
