test: add full suite for ordersLoadFromStorage function

--- a/test/tests.html
+++ b/test/tests.html
@@ -19,6 +19,7 @@
     <script type="module" src="./scripts/checkout/paymentSummaryTest.js"></script>
     <script type="module", src="./scripts/checkout/orderSummaryTest.js"></script>
     <script type="module", src="./scripts/checkout/orderSummaryEventsTest.js"></script>
+    <script type="module" src="./data/ordersTest.js"></script>
   </head>
   <body>
     <div class="tests-container"></div>
