test: add full suite for renderProgressBar function

--- a/test/tests.html
+++ b/test/tests.html
@@ -21,6 +21,7 @@
     <script type="module", src="./scripts/checkout/orderSummaryEventsTest.js"></script>
     <script type="module" src="./data/ordersTest.js"></script>
     <script type="module" src="./scripts/tracking/trackingUtilsTest.js"></script>
+    <script type="module" src="./scripts/tracking/trackingHTMLTest.js"></script>
   </head>
   <body>
     <div class="tests-container"></div>
