fix: fix the error of rendering checkout page

--- a/test/tests.html
+++ b/test/tests.html
@@ -25,5 +25,8 @@
   </head>
   <body>
     <div class="tests-container"></div>
+    <div class="return-to-home-link"></div>
+    <div class="payment-summary"></div>
+    <div class="order-summary"></div>
   </body>
 </html>
